--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   file_picker: ^8.0.3
   ffi: ^2.1.2
   format: ^1.5.2
+  path: ^1.9.0
+  path_provider: ^2.1.3
+  json_serializable: ^6.8.0
+  json_annotation: ^4.9.0
+  build_runner: ^2.4.11
 
 dev_dependencies:
   flutter_test:
