--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   build_runner: ^2.4.11
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,10 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/app_icon_1024.png"
   min_sdk_android: 23
+
+flutter_native_splash:
+  background_image: "assets/app_splash_1024.png"
+  ios_content_mode: center
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
