--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   build_runner: ^2.4.11
-  flutter_native_splash: ^2.4.0
+  background_downloader: ^8.5.2
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +58,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
 
 flutter_launcher_icons:
   android: true
