--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,13 +24,13 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.example.woolydart_example"
+    namespace = "com.animalmachine.mindmeld"
     compileSdk 34
     ndkVersion android.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
@@ -43,6 +43,10 @@ android {
 
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
     }
 
     buildTypes {
