--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = woolydart_example
+PRODUCT_NAME = mindmeld
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.woolydartExample
+PRODUCT_BUNDLE_IDENTIFIER = com.animalmachine.mindmeld
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.animalmachine. All rights reserved.
