--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "woolydart_example" "\0"
+            VALUE "CompanyName", "com.animalmachine" "\0"
+            VALUE "FileDescription", "mindmeld" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "woolydart_example" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "woolydart_example.exe" "\0"
-            VALUE "ProductName", "woolydart_example" "\0"
+            VALUE "InternalName", "mindmeld" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.animalmachine. All rights reserved." "\0"
+            VALUE "OriginalFilename", "mindmeld.exe" "\0"
+            VALUE "ProductName", "mindmeld" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
