enabled vulkan on android

--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 set(BUILD_SHARED_LIBS ON)
 set(LLAMA_OPENMP OFF)
 set(LLAMA_SVE ON)
+set(LLAMA_VULKAN ON)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
