basic macos target implemented; make_macos_deps.sh builds the required woolydart binary

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ android/app/.cxx
 packages/woolydart
 ios/Frameworks/libllama.dylib
 ios/Frameworks/libllama.framework/libllama
+macos/Frameworks/libllama.dylib
+macos/Frameworks/libllama.framework/libllama
