--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/app_icon_1024.png"
   min_sdk_android: 23
+  macos:
+    generate: true
+    image_path: "assets/app_icon_1024.png"
 
 flutter_native_splash:
   background_image: "assets/app_splash_1024.png"
