--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   json_annotation: ^4.9.0
   build_runner: ^2.4.11
   background_downloader: ^8.5.2
+  window_manager: ^0.3.9
 
 dev_dependencies:
   flutter_test:
