* android: fixed build and confirmed working again. hardcoded ndk and cmake versions, updated library filename * android: added build instructions to readme * added version number to ConfigModelSettings

--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.22)
 
 set(BUILD_SHARED_LIBS OFF)
 set(GGML_STATIC ON)
-set(GGML_OPENMP OFF)
-set(GGML_SVE OFF)
-set(GGML_VULKAN ON)
+#set(GGML_OPENMP OFF)
+#set(GGML_SVE OFF)
+#set(GGML_VULKAN ON)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-add_subdirectory(./woolydart/src)
+add_subdirectory(./woolydart/src/woolycore)
