--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.animalmachine.mindmeld"
     compileSdk 34
-    ndkVersion android.ndkVersion
+    ndkVersion "26.3.11579264"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -59,6 +59,7 @@ android {
 
     externalNativeBuild {
         cmake {
+            version "3.22.1"
             path "../../packages/CMakeLists.txt"
         }
     }
