--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   build_runner: ^2.4.12
   background_downloader: ^8.5.3
   window_manager: ^0.4.0
+  profile_photo: ^1.0.3
 
 dev_dependencies:
   flutter_test:
