*feature: added script to build linux appimage

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ ios/Frameworks/libllama.dylib
 ios/Frameworks/libllama.framework/libllama
 macos/Frameworks/libllama.dylib
 macos/Frameworks/libllama.framework/libllama
+Mindmeld*.AppImage
